chore: adjust code for deploy on heroku

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MONGO_URI = mongodb://localhost:27017
+MONGO_URI = mongodb+srv://rafael:estudo123!@cluster0.gheob.mongodb.net/DrivenCracy?retryWrites=true&w=majority
 BANC = DrivenCracy
-PORT = 5000
