--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://Rafael:estudo123!@cluster0.gheob.mongodb.net/DrivenCracy?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://rafael:mVbtrmlimjAmq131!@cluster0.gheob.mongodb.net/DrivenCracy?retryWrites=true&w=majority&authSource=admin
 BANC = DrivenCracy
