--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI = mongodb+srv://rafael:estudo123!@cluster0.gheob.mongodb.net/DrivenCracy?retryWrites=true&w=majority&authSource=admin
 BANC = DrivenCracy
+PORT = 5000
